W41/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Scratch_Contact__c</fullName>
        <displayFormat>STC-{0000}</displayFormat>
        <label>Scratch Contact</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>contact_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>contact checkbox</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Contact_Record_type</fullName>
        <active>true</active>
        <label>Contact Record type</label>
    </recordTypes>
</CustomObject>